<resources>
    <string name="app_name">Intentio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Intencje</string>
    <string name="menu_account">Moje konto</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="app_name_title">Intentio</string>
    <string name="place_placeholder">Parafia Św. Wawrzyńca w Częstochowie</string>
    <string name="title_activity_config">ConfigActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">HASŁO</string>
    <string name="prompt_password_repetition">POWTÓRZ HASŁO</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_register">Utwórz konto</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>