<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.intentio.ui.main.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_intentFragment"
            app:destination="@id/intentFragment" />
        <action
            android:id="@+id/action_nav_home_to_calendarFragment"
            app:destination="@id/calendarFragment" />
        <action
            android:id="@+id/action_nav_home_to_sacramentsFragment"
            app:destination="@id/sacramentsFragment" />
        <action
            android:id="@+id/action_nav_home_to_othersFragment"
            app:destination="@id/othersFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.intentio.ui.main.gallery.GalleryFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.intentio.ui.main.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/intentFragment"
        android:name="com.example.intentio.ui.main.intent.IntentFragment"
        android:label="IntentFragment" >
        <action
            android:id="@+id/action_intentFragment_to_orderIntentionFragment"
            app:destination="@id/orderIntentionFragment" />
    </fragment>

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.intentio.ui.main.calendar.CalendarFragment"
        android:label="fragment_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/sacramentsFragment"
        android:name="com.example.intentio.ui.main.sacraments.SacramentsFragment"
        android:label="fragment_sacraments"
        tools:layout="@layout/fragment_sacraments" />
    <fragment
        android:id="@+id/othersFragment"
        android:name="com.example.intentio.ui.main.others.OthersFragment"
        android:label="fragment_others"
        tools:layout="@layout/fragment_others" />
    <fragment
        android:id="@+id/orderIntentionFragment"
        android:name="com.example.intentio.ui.main.order_intention.OrderIntentionFragment"
        android:label="fragment_order_intention"
        tools:layout="@layout/fragment_order_intention" >
        <action
            android:id="@+id/action_orderIntentionFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>


    <fragment
        android:id="@+id/nav_config"
        android:name="com.example.intentio.ui.main.config.ConfigFragment"
        android:label="fragment_config"
        tools:layout="@layout/fragment_config" />


</navigation>