<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <import type="com.example.intentio.data.UserType" />

        <variable
            name="isStartView"
            type="Boolean" />

        <variable
            name="isAccountCreating"
            type="Boolean" />

        <variable
            name="userType"
            type="com.example.intentio.data.UserType" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/userTypeButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="40dp"
            android:orientation="vertical"
            android:visibility="@{isStartView ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="56dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:cornerRadius="20dp"
                app:strokeColor="@color/pink"
                app:strokeWidth="2dp"
                android:text="PARAFIANIN"
                android:textColor="@color/green_fig"
                android:textSize="21sp"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/priest"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="36dp"
                android:layout_marginBottom="36dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:cornerRadius="20dp"
                app:strokeColor="@color/pink"
                app:strokeWidth="2dp"
                android:text="KAPŁAN"
                android:textColor="@color/green_fig"
                android:textSize="21sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:enabled="false"
            android:src="@{isStartView ? @drawable/baseline_exit_to_app_24 : @drawable/baseline_arrow_back_24}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <ImageButton
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:enabled="false"
            android:src="@drawable/baseline_info_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:visibility="@{isStartView ? View.GONE  : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.login.LoginActivity">

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <EditText
                android:id="@+id/passwordRepetition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/prompt_password_repetition"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="start"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/green_fig"
                android:enabled="false"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordRepetition" />

            <TextView
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textColor="@color/green_fig"
                android:textSize="18sp"
                android:visibility="@{userType == UserType.FAITHFUL ?  View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>